--- a/Backend_part/.gitignore
+++ b/Backend_part/.gitignore
@@ -1,24 +1,15 @@
-# Logs
-logs
+
+__pycache__/
+*.py[cod]
+*.sqlite3
+db.sqlite3
+venv/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+*.pot
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+media
 
-node_modules
-dist
-dist-ssr
-*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
